More kit/sample work.